--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "new-portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://momenmustafa45.github.io/My-Portfolio/",
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
@@ -12,12 +13,14 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^3.0.0-beta.6",
     "axios": "^0.27.2",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "save-dev": "^0.0.1-security",
     "slick-carousel": "^1.8.1",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
@@ -26,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
