--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "new-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://momenmustafa45.github.io/My-Portfolio/",
+  "homepage": "https://momenmustafa45.github.io/My-Portfolio/contact",
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
