--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "new-portfolio",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://momenmustafa45.github.io/My-Portfolio/",
   "dependencies": {
     "@emotion/react": "^11.9.3",
